Add custom dumbbell icon

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -92,6 +92,8 @@
 @import '../../CustomMui/CustomAlertDialog/styles/CustomAlertDialog.scss';
 @import '../../CustomMui/CustomOptionsMenu/styles/CustomOptionsMenu.scss';
 
+@import '../../components/Icons/styles/Icons.scss';
+
 @import 'react-circular-progressbar/dist/styles.css';
 @import 'rc-slider/assets/index.css';
 @import 'react-swipeable-list/dist/styles.css';
