Add basic exercise searching

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -77,6 +77,9 @@
 @import '../../pages/LiftMate/Session/styles/Session.scss';
 @import '../../pages/LiftMate/Progress/styles/Progress.scss';
 
+@import '../../components/ExercisesSearch/styles/ExercisesSearch.scss';
+@import '../../pages/LiftMate/EditWorkout/styles/ExercisesStage.scss';
+
 @import '../../CustomMui/SignIn/styles/SignIn.scss';
 @import '../../CustomMui/BottomNavigation/styles/FixedBottomNavigation.scss';
 @import '../../CustomMui/CustomToggle/styles/CustomToggle.scss';
