--- a/src/components/ExercisesFilter/styles/ExercisesFilter.scss
+++ b/src/components/ExercisesFilter/styles/ExercisesFilter.scss
@@ -1,7 +1,11 @@
 .exercises-filter-container {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  width: 100%;
-}
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1rem 0rem;
 
+  width: 100%;
+
+  .custom-input {
+    grid-column: 1/-1;
+  }
+}
