--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -79,6 +79,7 @@
 
 @import '../../components/ExercisesSearch/styles/ExercisesSearch.scss';
 @import '../../pages/LiftMate/EditWorkout/styles/ExercisesStage.scss';
+@import '../../components/ExercisesFilter/styles/ExercisesFilter.scss';
 
 @import '../../CustomMui/SignIn/styles/SignIn.scss';
 @import '../../CustomMui/BottomNavigation/styles/FixedBottomNavigation.scss';
