--- a/src/components/ExercisesFilter/styles/ExercisesFilter.scss
+++ b/src/components/ExercisesFilter/styles/ExercisesFilter.scss
@@ -2,10 +2,29 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 1rem 0rem;
+  align-items: stretch;
+  position: sticky;
+  top: 0px;
+  // left: 0;
+  // right: 0;
+  z-index: 100;
+  padding-top: 10px;
 
   width: 100%;
 
+  background-color: $white;
+
+  &.dark-mode {
+    background-color: $darker-gray;
+  }
+
   .custom-input {
     grid-column: 1/-1;
+  }
+
+  .custom-select {
+    .MuiSelect-select {
+      // height: 40px;
+    }
   }
 }
