Add basic ExerciseCard

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -62,6 +62,7 @@
 @import '../../components/ClickAnimation/styles/ClickAnimation.scss';
 @import '../../components/ExerciseDetails/styles/ExerciseDetails.scss';
 @import '../../components/ExerciseEditor/styles/ExerciseEditor.scss';
+@import '../../components/ExerciseCard/styles/ExerciseCard.scss';
 @import '../../components/MyTraineeCard/styles/MyTraineeCard.scss';
 @import '../../components/TrainerRequestCard/styles/TrainerRequestCard.scss';
 @import '../../components/TraineeUserCard/styles/TraineeUserCard.scss';
