--- a/src/pages/LiftMate/EditWorkout/styles/EditWorkout.scss
+++ b/src/pages/LiftMate/EditWorkout/styles/EditWorkout.scss
@@ -6,7 +6,7 @@
   }
 
   .custom-stepper-stage {
-    height: calc(100vh - $header-height - 250px);
+    // height: calc(100vh - $header-height - 250px);
   }
 
   .edit-workout-stage {
