Implement session login into new Workouts page

--- a/src/pages/LiftMate/EditWorkout/styles/EditWorkout.scss
+++ b/src/pages/LiftMate/EditWorkout/styles/EditWorkout.scss
@@ -89,6 +89,7 @@
   .week-number-toggle {
     overflow-x: auto;
     max-width: calc(100vw - 2em);
+    margin-bottom: 1rem;
   }
   .times-per-week-container {
     margin-top: 1rem;
