--- a/src/components/SlideDialog/styles/SlideDialog.scss
+++ b/src/components/SlideDialog/styles/SlideDialog.scss
@@ -14,6 +14,11 @@
       border-top-left-radius: 10px;
     }
   }
+  .slide-dialog-content {
+    height: 100%;
+    // align-self: center;
+    justify-self: center;
+  }
   &.dark-mode {
     background-color: $darker-gray !important;
     color: $white !important;
