Remove unwanted files, style WorkoutCard header

--- a/src/components/ExercisesFilter/styles/ExercisesFilter.scss
+++ b/src/components/ExercisesFilter/styles/ExercisesFilter.scss
@@ -15,7 +15,7 @@
   background-color: $white;
 
   &.dark-mode {
-    background-color: $darker-gray;
+    background-color: $dark-gray;
   }
 
   .custom-input {
