--- a/src/pages/LiftMate/Workouts/styles/WorkoutCard.scss
+++ b/src/pages/LiftMate/Workouts/styles/WorkoutCard.scss
@@ -10,6 +10,12 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    .header-actions-container {
+      display: flex;
+      align-items: center;
+      gap: 2rem;
+    }
   }
 
   &.dark-mode {
