Add reset exercise filter button

--- a/src/components/ExercisesFilter/styles/ExercisesFilter.scss
+++ b/src/components/ExercisesFilter/styles/ExercisesFilter.scss
@@ -18,6 +18,14 @@
     background-color: $dark-gray;
   }
 
+  .results-msg-container {
+    grid-column: 1/-1;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 0.5rem;
+  }
+
   .custom-input {
     grid-column: 1/-1;
   }
