--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -69,6 +69,7 @@
 @import '../../components/SetsTable/styles/SetsTable.scss';
 @import '../../components/DateRangeController/styles/DateRangeController.scss';
 @import '../../components/WorkoutSession/styles/WorkoutSession.scss';
+@import '../../components/CustomSwipeAction/styles/CustomSwipeAction.scss';
 
 @import '../../components/LiftMate/MuscleGroupCard/styles/MuscleGroupCard.scss';
 @import '../../pages/LiftMate/EditWorkout/styles/EditWorkout.scss';
