--- a/src/pages/LiftMate/EditWorkout/styles/EditWorkout.scss
+++ b/src/pages/LiftMate/EditWorkout/styles/EditWorkout.scss
@@ -10,6 +10,13 @@
     height: 100%;
 
     &.name-exercises-stage {
+      & > .divider {
+        margin-bottom: 0.5rem;
+      }
+      .exercise-card-container {
+        margin: 0.5rem 0;
+      }
+
       .no-exercises-container {
         justify-self: center;
         display: grid;
