--- a/src/components/WorkoutSession/styles/WorkoutSession.scss
+++ b/src/components/WorkoutSession/styles/WorkoutSession.scss
@@ -9,8 +9,9 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 1rem 0;
-  padding-inline-start: 1rem;
+  // padding: 1rem 0;
+  padding-top: 1rem;
+  // padding-inline-start: 1rem;
 
   .actions-container {
     display: flex;
