Add make sure to diaplay undone sets whenever a new playWorkout

--- a/src/CustomMui/SignIn/styles/SignIn.scss
+++ b/src/CustomMui/SignIn/styles/SignIn.scss
@@ -1,5 +1,6 @@
 .login-sign-up-container {
-  margin-top: $header-margin;
+  // margin-top: $header-margin;
+  margin-top: 30px;
   div {
     max-height: calc(100vh - 79.32px - 174.59px);
     min-height: fit-content;
