--- a/src/pages/PwaInstall/styles/PwaInstall.scss
+++ b/src/pages/PwaInstall/styles/PwaInstall.scss
@@ -5,6 +5,10 @@
   gap: 1.5rem;
   padding: 2.5rem 1.3rem;
 
+  .logo-image {
+    border-radius: 12px;
+  }
+
   .title-container {
     display: grid;
     grid-template-columns: 40px 1fr 40px;
