--- a/src/components/SlideDialog/styles/SlideDialog.scss
+++ b/src/components/SlideDialog/styles/SlideDialog.scss
@@ -8,7 +8,20 @@
   // height: 100% !important;
 }
 
+.MuiDialog-container,
+.MuiDialog-root {
+  border-top-right-radius: 10px;
+  border-top-left-radius: 10px;
+}
+
+.MuiAppBar-positionFixed {
+  border-top-right-radius: 10px;
+  border-top-left-radius: 10px;
+}
+
 .slide-dialog {
+  border-top-right-radius: 10px;
+  border-top-left-radius: 10px;
   &.MuiPaper-root {
     .MuiToolbar-root {
       border-top-right-radius: 10px;
